Tue Aug 21 02:45:07 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/config-macosx-leopard.h:
          setclock not supported on current macs.

Mon Aug 20 18:07:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Global_Macros.h:
          Doxyen fixes

        * bin/valgrind.supp:
          Added another needed suppression

Mon Aug 20 10:03:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-monotonic-timer.html:
          Fixed fuzz

Mon Aug 20 09:03:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Module.cpp:
          Fixed possible memory leak and dead code, uncovered by Coverity scan

Mon Aug 20 08:36:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-monotonic-timer.html:
          New document describing the ACE monotonic timer support for conditions,
          message queues and tasks

        * docs/index.html:
          Added new page, removed link to site that doesn't work anymore

Mon Aug 20 08:21:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_types.h:
          Define CLOCK_MONOTONIC to 1 when it is not defined, should fix
          hpux problems

Mon Aug 20 07:57:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.h:
        * ace/Condition_Attributes.inl:
          Added accessor for attributes and removed friend declaration,
          that hopefully fixes the Sun Studio 11 problems

        * ace/Condition_Recursive_Thread_Mutex.cpp:
        * ace/Condition_T.cpp:
        * ace/Condition_Thread_Mutex.cpp:
          Use accessor of the attributes.

Sat Aug 18 19:25:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Null_Condition.h:
          Fix for single threaded builds

Sat Aug 18 19:23:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.h:
          Added forward declaration, maybe this fixes solaris 9
